side bar overflow hidding issue fixed and added page visit and verified badge

--- a/src/styles.css
+++ b/src/styles.css
@@ -273,6 +273,7 @@
     border-radius: 5px;
   }
   
+  
   .has-scrollbar::-webkit-scrollbar-button { width: 20px; }
   
   .content-card {
@@ -342,10 +343,10 @@
   
   .info-content .name {
     color: var(--white-2);
-    font-size: var(--fs-3);
+    /* font-size: var(--fs-4); */
     font-weight: var(--fw-500);
     letter-spacing: -0.25px;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
   }
   
   .info-content .title {
@@ -1376,7 +1377,7 @@
   
     .avatar-box img { width: 120px; }
   
-    .info-content .name { margin-bottom: 15px; }
+    /* .info-content .name { margin-bottom: 15px; } */
   
     .info-content .title { padding: 5px 18px; }
   
@@ -1870,11 +1871,12 @@
     .sidebar {
       position: sticky;
     top: 60px;
-    max-height: max-content;
-    height: 100%;
+    min-height: 695px;
+    /* height: 100%; */
     margin-bottom: 0;
-    padding-top: 60px;
+    padding-top: 40px;
     z-index: 1;
+    /* overflow-y:visible; */
     }
   
     .sidebar-info { flex-direction: column; }
